전화하기 수정

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                     <li class="nav-item"><a class="nav-link" href="business.html">사업분야</a></li>
                     <li class="nav-item"><a class="nav-link" href="service.html">서비스</a></li>
                     <li class="nav-item"><a class="nav-link text-primary fw-bold" href="inquiry-corp.html">견적문의</a></li>
+                    <a href="tel:010-8571-6471" class="contact-btn">전화</a>
                 </ul>
             </div>
         </div>
