--- a/about.html
+++ b/about.html
@@ -72,35 +72,70 @@
         </div>
     </section>
 
-    <section class="py-5 bg-light">
+       <section class="py-5 bg-light">
         <div class="container">
-            <h3 class="fw-bold mb-4 text-center">오시는 길</h3>
+            <h3 class="fw-bold mb-5 text-center">오시는 길</h3>
+            
             <div class="row">
                 <div class="col-md-4 mb-4">
-                    <div class="p-4 bg-white rounded shadow-sm h-100">
-                        <h5 class="fw-bold mb-3">본사 위치</h5>
-                        <p class="mb-1 text-muted">주소</p>
-                        <p class="fw-bold">경기도 평택시 ○○로 123, 바른빌딩 4층</p>
-                        <hr>
-                        <p class="mb-1 text-muted">대표번호</p>
-                        <p class="fw-bold">010-XXXX-XXXX</p>
-                        <p class="mb-1 text-muted">이메일</p>
-                        <p class="fw-bold">contact@barunplus.com</p>
+                    <div class="nav flex-column nav-pills shadow-sm bg-white p-3 rounded" id="v-pills-tab" role="tablist">
+                        <button class="nav-link active mb-2 py-3 fw-bold" id="v-pills-home-tab" data-bs-toggle="pill" data-bs-target="#v-pills-home" type="button" role="tab">
+                             📍 본사 (천안)
+                        </button>
+                        <button class="nav-link py-3 fw-bold" id="v-pills-branch-tab" data-bs-toggle="pill" data-bs-target="#v-pills-branch" type="button" role="tab">
+                             📍 지사 (평택) </button>
+                    </div>
+
+                    <div class="tab-content mt-4" id="v-pills-tabContent">
+                        <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel">
+                            <div class="p-4 bg-white rounded shadow-sm">
+                                <h5 class="fw-bold text-primary">바른플러스 본사</h5>
+                                <p class="mb-1 text-muted small">주소</p>
+                                <p class="fw-bold mb-3">충남 천안시 서북구 성성동 1001, G1비즈캠퍼스 12층, 1222호</p>
+                                <p class="mb-1 text-muted small">문의전화</p>
+                                <p class="fw-bold">070-5158-0201</p>
+                            </div>
+                        </div>
+                        <div class="tab-pane fade" id="v-pills-branch" role="tabpanel">
+                            <div class="p-4 bg-white rounded shadow-sm border-top border-primary border-4">
+                                <h5 class="fw-bold text-success">바른플러스 지사</h5>
+                                <p class="mb-1 text-muted small">주소</p>
+                                <p class="fw-bold mb-3">경기도 평택시 송탄로 254, 3층</p>
+                                <p class="mb-1 text-muted small">문의전화</p>
+                                <p class="fw-bold">070-5158-0201</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
+
                 <div class="col-md-8">
-                    <div class="map-container shadow-sm">
-                        <p class="text-muted"> 여기에 네이버/카카오 지도 API 또는 iframe이 들어갑니다.<br>
-                        (구글 맵/네이버 지도의 '공유하기' -> '지도 퍼가기' 코드를 붙여넣으세요)</p>
+                    <div class="tab-content" id="v-pills-mapContent">
+                        <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel">
+                            <div class="map-container shadow-sm overflow-hidden" style="height: 450px; background: #e9ecef; border-radius: 15px; display: flex; align-items: center; justify-content: center;">
+                                <p class="text-muted">본사 지도가 들어갈 자리입니다.</p>
+                            </div>
+                        </div>
+                        <div class="tab-pane fade" id="v-pills-branch" role="tabpanel">
+                            <div class="map-container shadow-sm overflow-hidden" style="height: 450px; background: #e9ecef; border-radius: 15px; display: flex; align-items: center; justify-content: center;">
+                                <p class="text-muted">지사 지도가 들어갈 자리입니다.</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
 
+    <style>
+        .nav-pills .nav-link { color: #555; border: 1px solid #eee; text-align: left; }
+        .nav-pills .nav-link.active { background-color: #0046ff; color: white; border-color: #0046ff; }
+        .map-container iframe { width: 100%; height: 100%; border: 0; }
+    </style>
+
+
     <footer class="footer">
         <div class="container text-center">
-            <p><strong>바른플러스</strong> | 주소: 경기도 평택시 ○○로 123 | 대표번호: 010-XXXX-XXXX</p>
+            <p><strong>바른플러스</strong> | 주소: 충남 천안시 서북구 성성동 1001, G1비즈캠퍼스 12층 1222호 | 대표번호: 070-5158-0201</p>
             <p>Copyright © 2024 Barun Plus. All Rights Reserved.</p>
             <a href="privacy.html" class="text-decoration-none text-muted me-3">개인정보처리방침</a>
             <a href="terms.html" class="text-decoration-none text-muted">이용약관</a>
