홈화면-주소수정

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
     <footer class="footer">
         <div class="container text-center">
-            <p><strong>바른플러스</strong> | 주소: 경기도 평택시 00로 000 | 대표번호: 010-XXXX-XXXX</p>
+            <p><strong>바른플러스</strong> | 주소: 충남 천안시 서북구 성성동 1001 G1비즈캠퍼스 12층 1222호 | 대표번호: 070-5158-0201</p>
             <p>Copyright © 2024 Barun Plus. All Rights Reserved.</p>
             <a href="privacy.html" class="text-decoration-none text-muted me-3">개인정보처리방침</a>
             <a href="terms.html" class="text-decoration-none text-muted">이용약관</a>
