--- a/inquiry-corp.html
+++ b/inquiry-corp.html
@@ -90,11 +90,11 @@
                                 
                                 <div class="mb-3">
                                     <small class="text-primary fw-bold d-block">빠른 전화 상담</small>
-                                    <span class="fw-bold">031-XXXX-XXXX</span>
+                                    <span class="fw-bold">010-8571-6471</span>
                                 </div>
                                 <div class="mb-3">
                                     <small class="text-primary fw-bold d-block">이메일 문의</small>
-                                    <span class="fw-bold">contact@barunplus.com</span>
+                                    <span class="fw-bold">esongho@naver.com</span>
                                 </div>
                                 <hr>
                                 <p class="small text-muted">주말 및 공휴일 접수 건은 평일 영업일 기준 순차적으로 답변드립니다.</p>
@@ -102,7 +102,7 @@
                         </div>
 
                         <div class="col-md-8">
-                            <form action="https://formspree.io/f/본인의아이디" method="POST">
+                            <form action="https://formspree.io/f/mlggewpk" method="POST">
                                 <div class="row g-3">
                                     <div class="col-md-6">
                                         <label class="form-label">회사명</label>
@@ -155,22 +155,9 @@
     </section>
 
     <footer class="footer">
-        <div class="container">
-            <div class="row text-center text-md-start">
-                <div class="col-md-6 mb-3">
-                    <h5 class="fw-bold text-primary mb-3">바른플러스</h5>
-                    <p class="mb-1"><strong>본사:</strong> 경기도 평택시 ○○로 123, 4층</p>
-                    <p class="mb-1"><strong>지사:</strong> 충청남도 천안시 ○○로 456, 2층</p>
-                    <p class="mb-1"><strong>대표번호:</strong> 031-XXXX-XXXX | <strong>Email:</strong> contact@barunplus.com</p>
-                </div>
-                <div class="col-md-6 text-md-end">
-                    <div class="mb-3">
-                        <a href="privacy.html" class="text-decoration-none text-muted me-3">개인정보처리방침</a>
-                        <a href="terms.html" class="text-decoration-none text-muted">이용약관</a>
-                    </div>
-                    <p class="text-muted small">Copyright © 2026 Barun Plus. All Rights Reserved.</p>
-                </div>
-            </div>
+        <div class="container text-center">
+            <p><strong>바른플러스</strong> |  본사 : 충남 천안시 서북구 성성동 1001, G1비즈캠퍼스 12층 1222호  |  지사 : 경기도 평택시 송탄로 254, 3층  |</p>
+            <p>Copyright © 2026 Barun Plus. All Rights Reserved.</p>
         </div>
     </footer>
 
