--- a/about.html
+++ b/about.html
@@ -3,30 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>회사소개 | 바른플러스</title>
+    <title>바른플러스</title>
+    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        .page-header {
-            background-color: #f8f9fa;
-            padding: 60px 0;
-            border-bottom: 1px solid #dee2e6;
-        }
-        .navbar-brand { font-weight: bold; color: #0046ff !important; }
-        .greeting-box {
-            line-height: 1.8;
-            color: #444;
-        }
-        .highlight { color: #0046ff; font-weight: bold; }
-        .map-container {
-            background: #eee;
-            height: 400px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            border-radius: 10px;
-        }
-        .footer { background: #f8f9fa; padding: 40px 0; font-size: 0.9rem; margin-top: 50px; }
-    </style>
+    
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
