--- a/index.html
+++ b/index.html
@@ -3,21 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>바른플러스 | 제조·물류 아웃소싱 전문</title>
+    <title>바른플러스</title>
+    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        .hero-section {
-            background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('https://images.unsplash.com/photo-1586528116311-ad8dd3c8310d?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80');
-            background-size: cover;
-            color: white;
-            padding: 150px 0;
-            text-align: center;
-        }
-        .navbar-brand { font-weight: bold; color: #0046ff !important; }
-        .btn-primary { background-color: #0046ff; border: none; }
-        .footer { background: #f8f9fa; padding: 40px 0; font-size: 0.9rem; }
-    </style>
+    
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-white sticky-top shadow-sm">
