--- a/inquiry-corp.html
+++ b/inquiry-corp.html
@@ -5,50 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>기업 견적 문의 | 바른플러스</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        .navbar-brand { font-weight: bold; color: #0046ff !important; }
-        .page-header { background: #f0f4ff; padding: 60px 0; }
-        
-        /* 폼 스타일 커스텀 */
-        .inquiry-card {
-            border: none;
-            border-radius: 20px;
-            box-shadow: 0 10px 30px rgba(0,0,0,0.08);
-            background: white;
-            padding: 40px;
-            margin-top: -50px; /* 헤더와 살짝 겹치게 배치 */
-        }
-        .form-label { font-weight: 600; color: #333; margin-bottom: 8px; }
-        .form-control, .form-select {
-            border-radius: 10px;
-            padding: 12px 15px;
-            border: 1px solid #ddd;
-        }
-        .form-control:focus, .form-select:focus {
-            border-color: #0046ff;
-            box-shadow: 0 0 0 0.25rem rgba(0, 70, 255, 0.1);
-        }
-        .btn-submit {
-            background-color: #0046ff;
-            border: none;
-            padding: 15px;
-            border-radius: 10px;
-            font-weight: bold;
-            font-size: 1.1rem;
-            transition: 0.3s;
-        }
-        .btn-submit:hover {
-            background-color: #0035c2;
-            transform: translateY(-2px);
-        }
-        .info-box {
-            background: #f8f9fa;
-            border-radius: 15px;
-            padding: 25px;
-            height: 100%;
-        }
-        .footer { background: #f8f9fa; padding: 40px 0; font-size: 0.9rem; margin-top: 80px; }
-    </style>
+    
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
