--- a/inquiry-job.html
+++ b/inquiry-job.html
@@ -5,51 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>구직자 상담 문의 | 바른플러스</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        .navbar-brand { font-weight: bold; color: #0046ff !important; }
-        .page-header { background: #eefdf5; padding: 60px 0; } /* 구직자는 조금 더 편안한 색감 */
-        
-        .inquiry-card {
-            border: none;
-            border-radius: 20px;
-            box-shadow: 0 10px 30px rgba(0,0,0,0.08);
-            background: white;
-            padding: 40px;
-            margin-top: -50px;
-        }
-        .form-label { font-weight: 600; color: #333; }
-        .form-control, .form-select {
-            border-radius: 10px;
-            padding: 12px 15px;
-            border: 1px solid #ddd;
-        }
-        .form-control:focus {
-            border-color: #28a745; /* 구직자 페이지는 신뢰/안정의 녹색 포인트 */
-            box-shadow: 0 0 0 0.25rem rgba(40, 167, 69, 0.1);
-        }
-        .btn-job {
-            background-color: #28a745;
-            border: none;
-            padding: 15px;
-            border-radius: 10px;
-            font-weight: bold;
-            font-size: 1.1rem;
-            color: white;
-            transition: 0.3s;
-        }
-        .btn-job:hover {
-            background-color: #218838;
-            transform: translateY(-2px);
-            color: white;
-        }
-        .job-tip {
-            background: #f8f9fa;
-            border-left: 5px solid #28a745;
-            padding: 20px;
-            border-radius: 0 10px 10px 0;
-        }
-        .footer { background: #f8f9fa; padding: 40px 0; font-size: 0.9rem; margin-top: 80px; }
-    </style>
+    
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
