--- a/privacy.html
+++ b/privacy.html
@@ -5,12 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>개인정보처리방침 | 바른플러스</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        body { font-size: 0.95rem; color: #444; line-height: 1.7; }
-        .legal-content { background: white; padding: 40px; border-radius: 15px; shadow: 0 5px 15px rgba(0,0,0,0.05); }
-        h4 { font-weight: bold; margin-top: 30px; color: #333; border-left: 4px solid #0046ff; padding-left: 10px; }
-        .navbar-brand { font-weight: bold; color: #0046ff !important; }
-    </style>
+    
+    <link rel="stylesheet" href="style.css">
+    
 </head>
 <body class="bg-light">
 
