--- a/terms.html
+++ b/terms.html
@@ -5,12 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>이용약관 | 바른플러스</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        body { font-size: 0.95rem; color: #444; }
-        .legal-content { background: white; padding: 40px; border-radius: 15px; }
-        h4 { font-weight: bold; margin-top: 30px; color: #333; }
-        .navbar-brand { font-weight: bold; color: #0046ff !important; }
-    </style>
+    
+    <link rel="stylesheet" href="style.css">
 </head>
 <body class="bg-light">
 
