--- a/about.html
+++ b/about.html
@@ -93,16 +93,18 @@
 
                 <div class="col-md-8">
                     <div class="tab-content" id="v-pills-mapContent">
+                        
                         <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel">
-                            <div class="map-container shadow-sm overflow-hidden" style="height: 450px; background: #e9ecef; border-radius: 15px; display: flex; align-items: center; justify-content: center;">
-                                <p class="text-muted">본사 지도가 들어갈 자리입니다.</p>
+                            <div class="map-container shadow-sm overflow-hidden" style="height: 450px; border-radius: 15px;">
+                                <iframe src="https://naver.me/IFgVK0Xq" width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
                             </div>
                         </div>
                         <div class="tab-pane fade" id="v-pills-branch" role="tabpanel">
-                            <div class="map-container shadow-sm overflow-hidden" style="height: 450px; background: #e9ecef; border-radius: 15px; display: flex; align-items: center; justify-content: center;">
-                                <p class="text-muted">지사 지도가 들어갈 자리입니다.</p>
+                            <div class="map-container shadow-sm overflow-hidden" style="height: 450px; border-radius: 15px;">
+                                <iframe src="https://naver.me/Ge4XxuzG" width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
                             </div>
                         </div>
+             
                     </div>
                 </div>
             </div>
