--- a/about.html
+++ b/about.html
@@ -95,9 +95,23 @@
                     <div class="tab-content" id="v-pills-mapContent">
                         
                         <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel">
-                            <div class="map-container shadow-sm overflow-hidden" style="height: 450px; border-radius: 15px;">
-                                <iframe src="https://naver.me/IFgVK0Xq" width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+                            <div class="map-container shadow-sm" style="border-radius: 15px; overflow: hidden;">
+                                    <div id="daumRoughmapContainer1768289634580" class="root_daum_roughmap root_daum_roughmap_landing">
+                                    </div>
+                                        <script charset="UTF-8" class="daum_roughmap_loader_script" src="https://ssl.daumcdn.net/dmaps/map_js_init/roughmapLoader.js">
+                                        </script>
+                                            <script charset="UTF-8">
+                                                new daum.roughmap.Lander(
+                                                    {
+                                                        "timestamp" : "1768289634580",
+                                                        "key" : "fxzsw2hc2f6",
+                                                        "mapWidth" : "100%",
+                                                        "mapHeight" : "450"
+                                                    }
+                                                ).render();
+                                            </script>
                             </div>
+
                         </div>
                         <div class="tab-pane fade" id="v-pills-branch" role="tabpanel">
                             <div class="map-container shadow-sm overflow-hidden" style="height: 450px; border-radius: 15px;">
