--- a/about.html
+++ b/about.html
@@ -106,7 +106,7 @@
                                                         "timestamp" : "1768289634580",
                                                         "key" : "fxzsw2hc2f6",
                                                         "mapWidth" : "100%",
-                                                        "mapHeight" : "450"
+                                                        "mapHeight" : "100%"
                                                     }
                                                 ).render();
                                             </script>
