--- a/about.html
+++ b/about.html
@@ -105,7 +105,7 @@
                                                         "timestamp" : "1768289634580",
                                                         "key" : "fxzsw2hc2f6",
                                                         "mapWidth" : "100%",
-                                                        "mapHeight" : "100%"
+                                                        "mapHeight" : "450"
                                                     }
                                                 ).render();
                                             </script>
@@ -123,7 +123,7 @@
                                                         "timestamp" : "1768290775149",
                                                         "key" : "fjiqcke4j4z",
                                                         "mapWidth" : "100%",
-                                                        "mapHeight" : "100%"
+                                                        "mapHeight" : "450"
                                                     }
                                                 ).render();
                                             </script>
