--- a/about.html
+++ b/about.html
@@ -111,7 +111,7 @@
                                             </script>
                             </div>
                         </div>
-                        <div class="tab-pane fade" id="v-pills-home" role="tabpanel">
+                        <div class="tab-pane fade" id="v-pills-branch" role="tabpanel">
                             <div class="map-container shadow-sm" style="border-radius: 15px; overflow: hidden;">
                                     <div id="daumRoughmapContainer1768290775149" class="root_daum_roughmap root_daum_roughmap_landing">
                                     </div>
