--- a/about.html
+++ b/about.html
@@ -72,7 +72,7 @@
                     <div class="tab-content mt-4" id="v-pills-tabContent">
                         <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel">
                             <div class="p-4 bg-white rounded shadow-sm">
-                                <h5 class="fw-bold text-primary">바른플러스 본사</h5>
+                                <h5 class="fw-bold text-primary">천안 본사</h5>
                                 <p class="mb-1 text-muted small">주소</p>
                                 <p class="fw-bold mb-3">충남 천안시 서북구 성성동 1001, G1비즈캠퍼스 12층, 1222호</p>
                                 <p class="mb-1 text-muted small">문의전화</p>
@@ -81,7 +81,7 @@
                         </div>
                         <div class="tab-pane fade" id="v-pills-branch" role="tabpanel">
                             <div class="p-4 bg-white rounded shadow-sm border-top border-primary border-4">
-                                <h5 class="fw-bold text-success">바른플러스 지사</h5>
+                                <h5 class="fw-bold text-success">평택 지사</h5>
                                 <p class="mb-1 text-muted small">주소</p>
                                 <p class="fw-bold mb-3">경기도 평택시 송탄로 254, 3층</p>
                                 <p class="mb-1 text-muted small">문의전화</p>
