하단 줄바꿈 추가

--- a/privacy.html
+++ b/privacy.html
@@ -14,6 +14,19 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm mb-5">
         <div class="container">
             <a class="navbar-brand" href="index.html">바른플러스</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link text-primary fw-bold" href="about.html">회사소개</a></li>
+                    <li class="nav-item"><a class="nav-link text-primary fw-bold" href="business.html">사업분야</a></li>
+                    <li class="nav-item"><a class="nav-link text-primary fw-bold" href="service.html">서비스</a></li>
+                    <li class="nav-item"><a class="nav-link text-primary fw-bold" href="inquiry-corp.html">견적문의</a></li>
+                    <li class="nav-item"><a class="nav-link text-primary fw-bold" href="inquiry-job.html">구직문의</a></li>
+                    <li class="nav-item"><a class="nav-link text-primary fw-bold" href="tel:010-8571-6471">전화연결</a>
+                </ul>
+            </div>
         </div>
     </nav>
 
