--- a/about.html
+++ b/about.html
@@ -146,7 +146,9 @@
 
     <footer class="footer">
         <div class="container text-center">
-            <p><strong>바른플러스</strong> |  본사 : 충남 천안시 서북구 성성동 1001, G1비즈캠퍼스 12층 1222호  |  지사 : 경기도 평택시 송탄로 254, 3층  |</p>
+            <p><strong>바른플러스</strong> <br>
+                |  본사 : 충남 천안시 서북구 성성동 1001, G1비즈캠퍼스 12층 1222호  |<br>
+                |  지사 : 경기도 평택시 송탄로 254, 3층  |</p>
             <p>Copyright © 2026 Barun Plus. All Rights Reserved.</p>
             <a href="privacy.html" class="text-decoration-none text-muted me-3">개인정보처리방침</a>
             <a href="terms.html" class="text-decoration-none text-muted">이용약관</a>
