--- a/privacy.html
+++ b/privacy.html
@@ -65,5 +65,16 @@
         </div>
     </div>
 
+     <footer class="footer">
+        <div class="container text-center">
+            <p><strong>바른플러스</strong> <br>
+                |  본사 : 충남 천안시 서북구 성성동 1001, G1비즈캠퍼스 12층 1222호  |<br>
+                |  지사 : 경기도 평택시 송탄로 254, 3층  |</p>
+            <p>Copyright © 2026 Barun Plus. All Rights Reserved.</p>
+        </div>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    
 </body>
 </html>
