--- a/privacy.html
+++ b/privacy.html
@@ -71,10 +71,12 @@
                 |  본사 : 충남 천안시 서북구 성성동 1001, G1비즈캠퍼스 12층 1222호  |<br>
                 |  지사 : 경기도 평택시 송탄로 254, 3층  |</p>
             <p>Copyright © 2026 Barun Plus. All Rights Reserved.</p>
+            <a href="privacy.html" class="text-decoration-none text-muted me-3">개인정보처리방침</a>
+            <a href="terms.html" class="text-decoration-none text-muted">이용약관</a>
         </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    
+
 </body>
 </html>
