--- a/about.html
+++ b/about.html
@@ -157,4 +157,18 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
+    <script>
+    // 모든 탭 버튼을 찾습니다.
+    var tabTriggerEl = document.querySelectorAll('button[data-bs-toggle="pill"]');
+    
+    tabTriggerEl.forEach(function(tabEl) {
+        tabEl.addEventListener('shown.bs.tab', function (event) {
+            // 탭이 완전히 열린 후(shown), 윈도우 리사이즈 이벤트를 강제로 발생시킵니다.
+            // 카카오 맵은 화면 크기가 변하면 지도를 다시 그리는 속성이 있습니다.
+            window.dispatchEvent(new Event('resize'));
+        });
+    });
+</script>
+        
 </html>
