--- a/about.html
+++ b/about.html
@@ -62,16 +62,17 @@
         <div class="row">
             <div class="col-md-4 mb-4">
                 <div class="nav flex-column nav-pills shadow-sm bg-white p-3 rounded" id="v-pills-tab" role="tablist">
-                    <button class="nav-link active mb-2 py-3 fw-bold" data-bs-toggle="pill" data-bs-target=".multi-tab-home" type="button">
-                        📍 본사 (천안)
+                    <button class="nav-link active mb-2 py-3 fw-bold" id="tab-home" data-bs-toggle="pill" 
+                            data-bs-target="#content-home, #content-home-map" type="button" role="tab">
+                         📍 본사 (천안)
                     </button>
-
-                    <button class="nav-link py-3 fw-bold" id="tab-branch" data-bs-toggle="pill" data-bs-target="#content-branch" type="button" role="tab">
+                    <button class="nav-link py-3 fw-bold" id="tab-branch" data-bs-toggle="pill" 
+                            data-bs-target="#content-branch, #content-branch-map" type="button" role="tab">
                          📍 지사 (평택) 
                     </button>
                 </div>
 
-                <div class="tab-content mt-4">
+                <div class="tab-content mt-4" id="v-pills-addressContent">
                     <div class="tab-pane fade show active" id="content-home" role="tabpanel">
                         <div class="p-4 bg-white rounded shadow-sm">
                             <h5 class="fw-bold text-primary">천안 본사</h5>
@@ -94,11 +95,11 @@
             </div>
 
             <div class="col-md-8">
-                <div class="tab-content">
+                <div class="tab-content" id="v-pills-mapContent">
                     <div class="tab-pane fade show active" id="content-home-map" role="tabpanel">
-                        <div class="map-container shadow-sm" style="border-radius: 15px; overflow: hidden;">
-                            <div id="daumRoughmapContainer1768289634580" class="root_daum_roughmap root_daum_roughmap_landing"></div>
-                            <script charset="UTF-8" class="daum_roughmap_loader_script" src="https://ssl.daumcdn.net/dmaps/map_js_init/roughmapLoader.js"></script>
+                        <div class="map-container shadow-sm" style="border-radius: 15px; overflow: hidden; height: 450px;">
+                            <div id="daumRoughmapContainer1768289634580" class="root_daum_roughmap root_daum_roughmap_landing" style="width:100%;"></div>
+                            <script charset="UTF-8" src="https://ssl.daumcdn.net/dmaps/map_js_init/roughmapLoader.js"></script>
                             <script charset="UTF-8">
                                 new daum.roughmap.Lander({
                                     "timestamp" : "1768289634580",
@@ -110,8 +111,8 @@
                         </div>
                     </div>
                     <div class="tab-pane fade" id="content-branch-map" role="tabpanel">
-                        <div class="map-container shadow-sm" style="border-radius: 15px; overflow: hidden;">
-                            <div id="daumRoughmapContainer1768290775149" class="root_daum_roughmap root_daum_roughmap_landing"></div>
+                        <div class="map-container shadow-sm" style="border-radius: 15px; overflow: hidden; height: 450px;">
+                            <div id="daumRoughmapContainer1768290775149" class="root_daum_roughmap root_daum_roughmap_landing" style="width:100%;"></div>
                             <script charset="UTF-8">
                                 new daum.roughmap.Lander({
                                     "timestamp" : "1768290775149",
@@ -124,10 +125,10 @@
                     </div>
                 </div>
             </div>
-
         </div>
     </div>
 </section>
+
 
 <script>
     // 탭 클릭 시 지도가 깨지지 않도록 리사이즈 이벤트 발생
