--- a/about.html
+++ b/about.html
@@ -62,7 +62,7 @@
         <div class="row mb-5 pb-5 border-bottom">
             <div class="col-md-4 mb-3">
                 <div class="p-4 bg-white rounded shadow-sm border-start border-primary border-5">
-                    <h4 class="fw-bold text-primary mb-3">📍 천안 본사</h4>
+                    <h4 class="fw-bold text-primary mb-3"> 천안 본사</h4>
                     <p class="mb-1 text-muted small">주소</p>
                     <p class="fw-bold mb-3">충남 천안시 서북구 성성동 1001,<br>G1비즈캠퍼스 12층, 1222호</p>
                     <p class="mb-1 text-muted small">문의전화</p>
@@ -88,7 +88,7 @@
         <div class="row">
             <div class="col-md-4 mb-3">
                 <div class="p-4 bg-white rounded shadow-sm border-start border-success border-5">
-                    <h4 class="fw-bold text-success mb-3">📍 평택 지사</h4>
+                    <h4 class="fw-bold text-success mb-3"> 평택 지사</h4>
                     <p class="mb-1 text-muted small">주소</p>
                     <p class="fw-bold mb-3">경기도 평택시 송탄로 254, 3층</p>
                     <p class="mb-1 text-muted small">문의전화</p>
