--- a/index.html
+++ b/index.html
@@ -51,8 +51,10 @@
             <div class="row g-4">
                 <div class="col-md-3">
                     <div class="card h-100 border-0 shadow-sm p-4">
-                        <h3>🏗️</h3>
-                        <h4>제조/생산</h4>
+                        <h3>🏗️제조/생산</h3>
+                        <h4>다양한 분야, 다양한 공정에서<br>
+                            안정적인 생산인력 공급으로<br>
+                            높은 품질과, 생산성 보장  </h4>
                     </div>
                 </div>
                 <div class="col-md-3">
