--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
                 <div class="col-md-3">
                     <div class="card h-100 border-0 shadow-sm p-4">
                         <h3>🏗️제조/생산</h3>
-                        <h4>다양한 분야, 다양한 공정에서<br>
-                            안정적인 생산인력 공급으로<br>
-                            높은 품질과, 생산성 보장  </h4>
+                        <h4>반도체 / 디스플레이<br>
+                            자동차 부품 / 전자 부품<br>
+                            화장품 / 생필품  </h4>
                     </div>
                 </div>
                 <div class="col-md-3">
