--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="row g-4">
                 <div class="col-md-3">
                     <div class="card h-100 border-0 shadow-sm p-4">
-                        <h3>🏗️제조/생산</h3>
+                        <h3>🏗️제조 / 생산</h3>
                         <h4>반도체 / 디스플레이<br>
                             자동차 부품 / 전자 부품<br>
                             화장품 / 생필품  </h4>
@@ -59,19 +59,21 @@
                 </div>
                 <div class="col-md-3">
                     <div class="card h-100 border-0 shadow-sm p-4">
-                        <h3>📦</h3>
-                        <h4>물류/유통</h4>
+                        <h3>📦물류 / 유통</h3>
+                        <h4>입출고 / 피킹 / 포장<br>
+                            배차 / 운송</h4>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="card h-100 border-0 shadow-sm p-4">
-                        <h3>🧹</h3>
-                        <h4>시설관리</h4>
+                        <h3>🧹시설관리</h3>
+                        <h4>시설관리<br>
+                            청소 / 미화</h4>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="card h-100 border-0 shadow-sm p-4">
-                        <h3>🤝</h3>
+                        <h3>🤝채용대행</h3>
                         <h4>인력매칭</h4>
                     </div>
                 </div>
