--- a/index.html
+++ b/index.html
@@ -34,8 +34,12 @@
 
     <header class="hero-section">
         <div class="container">
-            <p class="fw-bold mb-3 lead" style="color: #ff8c00; letter-spacing: 1px;">
-                <i class="bi bi-check-circle-fill"></i>TOTAL HR Partner</p>
+            
+            <h1 class="display-4 fw-bold">
+                <span class="main-title-sub">TOTAL HR PARTNER</span><br>
+                    바른플러스
+            </h1>
+
             <h1 class="display-3 fw-bold mb-4">바른 인재, <br>현장의 가치를 더(+)하다</h1>
             <p class="lead mb-5">제조업·물류센터 맞춤형 인력 공급 전문 기업 바른플러스는<br>원칙을 지키는 정직한 관리로 귀사의 성공적인 파트너가 되겠습니다.</p>
             <div>
