인덱스 수정

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="row g-4">
                 <div class="col-md-3">
                     <div class="card h-100 border-0 shadow-sm p-4">
-                        <h3>🏗️제조 / 생산</h3>
+                        <h3>제조 / 생산</h3>
                         <h4>반도체 / 디스플레이<br>
                             자동차 부품 / 전자 부품<br>
                             화장품 / 생필품  </h4>
@@ -63,22 +63,28 @@
                 </div>
                 <div class="col-md-3">
                     <div class="card h-100 border-0 shadow-sm p-4">
-                        <h3>📦물류 / 유통</h3>
+                        <h3>물류 / 유통</h3>
                         <h4>입출고 / 피킹 / 포장<br>
                             배차 / 운송</h4>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="card h-100 border-0 shadow-sm p-4">
-                        <h3>🧹시설관리</h3>
+                        <h3>시설/ 미화</h3>
                         <h4>시설관리<br>
                             청소 / 미화</h4>
                     </div>
                 </div>
-                <div class="col-md-3">
-                    <div class="card h-100 border-0 shadow-sm p-4">
-                        <h3>🤝채용대행</h3>
-                        <h4>인력매칭</h4>
+                <div class="col-md-6 col-lg-3">
+                    <div class="card biz-card shadow-sm p-4 border-top border-primary border-4">
+                        <div class="icon-box text-center">🤝</div>
+                        <h4 class="fw-bold text-center mb-4">채용 / 알바</h4>
+                        <ul class="biz-list text-muted">
+                            <li>단기 프로젝트 인력</li>
+                            <li>성수기 대규모 충원</li>
+                            <li>계약직 채용 대행</li>
+                            <li>사무보조 인력 지원</li>
+                        </ul>
                     </div>
                 </div>
             </div>
